--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>ERROR 404</h1>
-    <p>Look, I don't know where I'm going in life either, but can you try a little harder?</p>
+    <p>Look, I don't know where I'm going in life either, but can you try a little harder next time?</p>
   </body>
 </html>
